--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,31 @@
-/* Error: expected ";".
- *   ,
- * 1 | @import "./base/reset"
- *   |                       ^
- *   '
- *   scss\main.scss 1:23  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: 'Error: expected ";".\a   \2577 \a 1 \2502  @import "./base/reset"\d\a   \2502                        ^\a   \2575 \a   scss\\main.scss 1:23  root stylesheet';
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+.nav {
+  height: 10vh;
+  padding: 1rem;
+}
+.nav__list {
+  text-align: right;
+}
+.nav__item {
+  display: inline;
+  padding: 1rem;
+}
+.nav__link {
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+.nav__link:hover {
+  color: blue;
+}
+.nav__link--active {
+  color: orange;
+}
+
+/*# sourceMappingURL=main.css.map */
