--- a/css/main.css
+++ b/css/main.css
@@ -20,12 +20,20 @@
   text-transform: uppercase;
   font-weight: 500;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  transition: all 1s;
 }
 .nav__link:hover {
   color: blue;
 }
 .nav__link--active {
-  color: orange;
+  color: #c46441;
+}
+
+.home-bgImg-container {
+  background-image: url(../../img/model-1.jpg);
+  height: 100vh;
+  background-position: center center;
+  background-size: cover;
 }
 
 /*# sourceMappingURL=main.css.map */
