--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -15,13 +15,16 @@
         font-size: 1rem;
         text-transform: uppercase;
         font-weight: 500;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family: $font-family;
+        // transition: all 1s;
+        @include transition(1s);
 
         &:hover{
             color: blue;
         }
+       
         &--active{
-            color: orange;
+            color: $secondary-color;
         }
 
     }
