--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -7,3 +7,8 @@ $text-color:#eee;
 //*Font
 
 $font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+
+//* Path Variables
+
+$main-bgImg-path:'../img/model-1.jpg'
