--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -3,8 +3,10 @@
 
 
 .home-bgImg-container{
-    background-image: url(../../img/model-1.jpg);
-    height: 100vh;
-    background-position: center center;
-    background-size: cover;
+    @include bgImg(100vh,$main-bgImg-path)
+}
+
+.home{
+    border: 2px solid red;
+    
 }
