--- a/css/main.css
+++ b/css/main.css
@@ -30,10 +30,15 @@
 }
 
 .home-bgImg-container {
-  background-image: url(../../img/model-1.jpg);
   height: 100vh;
+  width: 100%;
+  background: linear-gradient(to right, rgba(39, 39, 39, 0.9), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg");
   background-position: center center;
   background-size: cover;
+}
+
+.home {
+  border: 2px solid red;
 }
 
 /*# sourceMappingURL=main.css.map */
