--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,32 @@
 
 .home {
   border: 2px solid red;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+.home__name {
+  font-size: 5rem;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+}
+
+body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 1;
+  color: #eee;
+  height: 100vh;
+}
+
+a {
+  text-decoration: none;
+  color: #eee;
+}
+
+h1, h2, h3 {
+  font-weight: 400;
 }
 
 /*# sourceMappingURL=main.css.map */
