--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,3 +5,19 @@
 @import "./components/future", "./components/nav","./components/responsive";
 
 @import "./pages/about", "./pages/contact", "./pages/home", "./pages/project";
+
+
+body{
+    font-family: $font-family;
+    line-height: 1;
+    color: $text-color;
+    height: 100vh;
+}
+a{
+    text-decoration: none;
+    color: $text-color;
+}
+
+h1,h2,h3{
+    font-weight: 400;
+}
