--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -8,5 +8,16 @@
 
 .home{
     border: 2px solid red;
-    
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+
+    &__name{
+        font-size: 5rem;
+        padding-bottom: 1rem;
+        margin-bottom: 1rem;
+    }
+
 }
