--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,24 @@
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css);
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.link-style a, footer.horizontal a {
+  padding: 0.4rem;
+  transition: all 1s;
+}
+.link-style a:hover, footer.horizontal a:hover {
+  color: #c46441;
+}
+
+footer.horizontal {
+  height: 10vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 1rem;
 }
 
 .nav {
@@ -38,7 +55,6 @@
 }
 
 .home {
-  border: 2px solid red;
   height: 80vh;
   display: flex;
   flex-direction: column;
@@ -49,6 +65,11 @@
   font-size: 5rem;
   padding-bottom: 1rem;
   margin-bottom: 1rem;
+  border-bottom: 2px solid white;
+}
+.home__name--last {
+  color: red;
+  font-weight: 700;
 }
 
 body {
