--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,7 +6,7 @@
 
 @import "./pages/about", "./pages/contact", "./pages/home", "./pages/project";
 
-
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css);
 body{
     font-family: $font-family;
     line-height: 1;
