--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -7,7 +7,7 @@
 }
 
 .home{
-    border: 2px solid red;
+    // border: 2px solid red;
     height: 80vh;
     display: flex;
     flex-direction: column;
@@ -18,6 +18,12 @@
         font-size: 5rem;
         padding-bottom: 1rem;
         margin-bottom: 1rem;
+        border-bottom: 2px solid white;
+
+        &--last{
+            color: red;
+            font-weight: 700;
+        }
     }
 
 }
