--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,7 @@
 
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css);
 body{
+    background-color: $primary-color;
     font-family: $font-family;
     line-height: 1;
     color: $text-color;
