--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,11 @@
   box-sizing: border-box;
 }
 
-.link-style a, footer.vertical .social-icons a, footer.horizontal a {
+.link-style a, footer.middle a, footer.vertical .social-icons a, footer.horizontal a {
   padding: 0.4rem;
   transition: all 1s;
 }
-.link-style a:hover, footer.vertical .social-icons a:hover, footer.horizontal a:hover {
+.link-style a:hover, footer.middle a:hover, footer.vertical .social-icons a:hover, footer.horizontal a:hover {
   color: #c46441;
 }
 
@@ -38,6 +38,17 @@ footer.vertical .copyright {
   bottom: 1rem;
   right: 3rem;
   transform: rotate(90deg) translate(-3rem, -5rem);
+}
+
+footer.middle {
+  border: 2px solid red;
+  height: 20vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 1rem;
+  gap: 1rem;
 }
 
 .nav {
@@ -103,6 +114,41 @@ footer.vertical .copyright {
 }
 .about .about__job h6 {
   margin: 0.3rem 0;
+}
+
+.contact-bgImg-container {
+  height: 100vh;
+  width: 100%;
+  background: linear-gradient(to right, rgba(39, 39, 39, 0.9), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg");
+  background-position: center center;
+  background-size: cover;
+}
+.contact-bgImg-container nav {
+  height: 40vh;
+}
+
+.contact {
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+.contact h2 {
+  font-size: 3rem;
+  margin-bottom: 2rem;
+}
+.contact__list {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  font-size: 1.5rem;
+  gap: 1rem 2rem;
+  justify-content: center;
+  align-items: center;
+}
+.contact .text-secondary {
+  color: #c46441;
 }
 
 .home-bgImg-container {
