--- a/scss/components/_future.scss
+++ b/scss/components/_future.scss
@@ -43,3 +43,15 @@ footer.vertical{
         transform: rotate(90deg) translate(-3rem, -5rem);
     }
 }
+
+footer.middle{
+    border: 2px solid red;
+    height: 20vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 1rem;
+    gap: 1rem;
+    @extend .link-style;
+}
